FEAT: 피드 캐시를 score 기반 조회로 개선